--- a/public_html/Menu_proposition/Shop_MenuResponsive/css/shop_menu.css
+++ b/public_html/Menu_proposition/Shop_MenuResponsive/css/shop_menu.css
@@ -1,15 +1,15 @@
 /*Page*/
 html {
-    height: 100%;
+    /* height: 100%; */
 }
 body {
-    height: 100%;
+    /* height: 100%; */
     margin: 0;
     padding: 0;
 }
 .LogoArea{
     padding: 5px 10px;
-    margin-bottom: 5px;
+    margin-bottom: 11px;
 }
 .LogoImg{
     -moz-border-radius:10px 10px 10px 10px;
@@ -17,7 +17,7 @@ body {
     border-radius:10px 10px 10px 10px;
 }
 .div_menu_first{
-    border-top:  1px solid #ddd;
+    /* border-top:  1px solid #ddd; */
 }
 .div_menu{
     line-height: 20px;
@@ -104,7 +104,7 @@ body {
 
 #page{
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
     width: 100%;
 }
 .menu_user_zone{
@@ -132,7 +132,7 @@ body {
 }
 @media (max-width: 991px){
     #page>#canvas{
-        height: 100%;
+        /* height: 100%; */
         position: relative;
 
         -webkit-transform: translateX(0);
@@ -220,11 +220,12 @@ div_menu div_menu_internal_link{
     border-style: solid;
     font-weight: 600;
     color: #FFFFFF;
-    box-shadow: 0px 1px 0px 3px #428BCA;
+    box-shadow: 0px 0px 0px 2px #428BCA;
     z-index: 1;
 }
 .UserMenuArea{
-    margin-top: 4px;
+    margin-top: 3px;
+    font-size: 10pt;
 }
 .profilContainer{
     position: relative;
@@ -234,15 +235,15 @@ div_menu div_menu_internal_link{
     text-align: center;
     display: block;
     font-family: 'Arial', sans-serif;
-    font-size: 13pt;
-    color: #337AB7;
+    font-size: 17px;
+    color: #428BCA;
     margin: 0px;
 }
 .profilContainer>p:first-child{
     margin: 0px 0px 7px 0px;
 }
 .profilContainer>#userGroup{
-    font-size: 10pt;
+    font-size: 14px;
     font-weight: 500;
     color: #8A8A8A;
     margin: 0px;
@@ -265,7 +266,7 @@ body{
 .nav_main{
     padding-left:0px;
     margin:0px;
-    z-index: 100;
+    z-index: 10;
 }
 .nav_main:before,
 .nav_main:after {
@@ -276,7 +277,7 @@ body{
     clear:both;
 }
 .nav_main{
-    zoom:1; /* For IE 6/7 (trigger hasLayout) */
+    /* zoom:1; */ /* For IE 6/7 (trigger hasLayout) */
 }
 .nav_main > li {
     margin-top: auto;
@@ -290,7 +291,10 @@ body{
 @media (max-width: 679px){
     .sub_menu_content>.sub_menu_row{
         display: block;
-    }
+    
+        z-index: 1000;
+        z-index: 1000;    position: relative;
+}
     .sub_menu_content>.sub_menu_row>ul{
         display: block;
         width: 100%;
@@ -399,7 +403,7 @@ ol, ul {
     border-top: 0.45em solid;
 }
 .open > .dropdown_menu {
-    display: inline-block !important;
+    display: block !important;
 }
 .dropdown_menu{
     left: auto;
@@ -414,7 +418,7 @@ ol, ul {
     padding: 10px 0;
     position: absolute;
     text-align: left;
-    z-index: 1000;
+    z-index: 500;
     margin: 0 0 0 -1px !important;
 }
 @media (max-width: 991px){
@@ -424,7 +428,8 @@ ol, ul {
         right: 0 !important;
         margin-left: auto !important;
         margin-right: auto !important;
-    }
+    
+}
 }
 .dropdown_wrapper{
     text-align: right;
@@ -454,6 +459,9 @@ ol, ul {
 li.dropdown .sub_menu_column{
     padding:0;
     display: inline-block;
+    /* z-index: 1000; */
+    /* z-index: 1000; */    
+    /* position: relative; */
 }
 .sub_menu_link{
     padding: 7px 20px 7px 15px;
@@ -519,7 +527,7 @@ li.dropdown .sub_menu_column{
     position: fixed;
     z-index: 5;
     background-color: #FFFFFF;
-    border: 1px solid #D0D0D0;
+    border: 1px solid #DDDDDD;
     border-left: none;
     border-radius: 0px 5px 5px 0px;
     width: 21px;
